--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,89 +1,92 @@
 *{
-    margin:0;
-    padding:0;
-    text-decoration: none;
+  margin:0;
+  padding:0;
+  text-decoration: none;
 }
 li{
-    list-style:none
+  list-style:none
 }
 img{
-    vertical-align:top;
-    border:none
+  vertical-align:top;
+  border:none
 }
 body{
-    background-color: lightgray;
+  background-color: lightgray;
 }
 .button_wrap{
-
-    justify-content: space-between;
-    display: flex;
-    padding: 10px 10%;
+  border-style: solid;
+  justify-content: space-between;
+  display: flex;
+  padding: 10px 10%;
+  margin: 5px 0;
+}
+.switch_btn {
+padding: 10px;
+margin: 5px 0;
 }
 .button{
-    width: 80px;
-    height: 80px;
-    background-color: black;
-    border-radius: 40px;
-    color: white;
-    font-size: 20px;
-    font-weight: bold;
-    text-align: center;
-    line-height: 80px;
-    cursor: pointer;
-    user-select: none;
+  width: 80px;
+  height: 80px;
+  background-color: black;
+  border-radius: 40px;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
+  line-height: 80px;
+  cursor: pointer;
+  user-select: none;
 }
 .button:hover{
-    background-color: white;
-    color: black;
-    transition: .3s;
+  background-color: white;
+  color: black;
+  transition: .3s;
 }
 .message_wrap{
-    border-color: white;
-    color: black;
-    text-align: center;
-    padding: 5% 0;
-    display: flex;
-    justify-content: center;
+  border-color: black;
+  color: black;
+  text-align: center;
+  padding: 1% 0;
+  display: flex;
+  justify-content: center;
 }
 .message{
-    border-width: 2px;
-    border-style: solid;
-    margin: 0 10%;
-    padding: 10px;
-    width: 80%;
-    border-radius: 10px;
+  border-width: 2px;
+  border-style: solid;
+  margin: 0 10%;
+  padding: 10px;
+  width: 80%;
+  border-radius: 10px;
+}
+.bot_wrap{
+justify-content: space-around;
+display: flex;
 }
 .bot{
-    width: 100px;
-    height: 100px;
-    background-color: white;
-    border-radius: 50%;
-    color: black;
-    font-size: 20px;
-    font-weight: bold;
-    text-align: center;
-    line-height: 100px;
-    user-select: none;
-    margin: auto;
+  width: 100px;
+  height: 100px;
+  background-color: white;
+  border-radius: 50%;
+  color: black;
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
+  line-height: 100px;
+  user-select: none;
+  margin: auto;
 }
 .log_wrap{
-    display:flex;
-    justify-content: space-between;
-    padding: 15px 5%;
+  display:flex;
+  justify-content: space-between;
+  padding: 15px 5%;
 }
 .log{
-    width: 100px;
-    height: 50px;
-    border-style: solid;
-    border-width: 2px;
-    line-height: 50px;
-}
-.reset {
-  position: absolute;;
-  right: 10%;
-  top: 500px;
-  width: 50px;
-  height: 30px;
+  width: 100px;
+  height: 50px;
+  border-style: solid;
+  border-width: 2px;
+  line-height: 50px;
+  padding-left: 5px;
 }
 .win{
   background-color: lightgreen;
@@ -93,4 +96,21 @@ body{
 }
 .draw {
   background-color: none;
+}
+.delete {
+  width: 20px;
+  height: 20px;
+  margin: 0 10px;
+  margin-right: 5px;
+  border-style: none;
+  border-radius: 10px;
+  cursor: pointer;
+  user-select: none;
+}
+.reset {
+  position: absolute;;
+  right: 10%;
+  top: 500px;
+  width: 50px;
+  height: 30px;
 }
