--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -62,14 +62,18 @@
   <div class="message_wrap">
     <table>
       <th class="message">對戰紀錄:</th>
-      <tr class="message" *ngFor="let item of resultHistory; let i=index" >
+      <tr class="message" *ngFor="let item of resultHistory2; let i=index">
         <td class="message">
-          {{ "Bot1出" + playerTypeString.get(item.list.get(GetInfoByName(item.list,"Bot1"))!) }}
-          {{ "Bot2出" + playerTypeString.get(item.list.get(GetInfoByName(item.list,"Bot2"))!) }}
-          {{ "P1出" + playerTypeString.get(item.list.get(GetInfoByName(item.list,"Player1"))!) }}
-          {{ "P2出" + playerTypeString.get(item.list.get(GetInfoByName(item.list,"Player2"))!) }}
+          {{ item }}
+          <!-- {{ "Bot1出" + playerTypeString.get(this.gameApiService.GetInfoByName(item.list,"Bot1")!) }}
+          {{ "Bot2出" + playerTypeString.get(this.gameApiService.GetInfoByName(item.list,"Bot2")!) }}
+          {{ "P1出" + playerTypeString.get(this.gameApiService.GetInfoByName(item.list,"Player1")!) }}
+          {{ "P2出" + playerTypeString.get(this.gameApiService.GetInfoByName(item.list,"Player2")!) }} -->
           <b>
-            <label *ngIf="item.winner.length == item.totalPlayers; else notDraw">
+
+            <!-- {{ winName }} -->
+
+            <!-- <label *ngIf="item.winner.length == 0; else notDraw">
               和局
             </label>
             <ng-template #notDraw>
@@ -77,7 +81,7 @@
               <label *ngFor="let item2 of item.winner">
                 {{ item2.name }}
               </label>
-            </ng-template>
+            </ng-template> -->
           </b>
           <!-- <button class="delete" (click)="Delete(i)">X</button> -->
         </td>
@@ -85,4 +89,5 @@
     </table>
   </div>
 </body>
+
 </html>
